--- a/src/app/modules/admin/components/edit-productos/edit-productos.component.html
+++ b/src/app/modules/admin/components/edit-productos/edit-productos.component.html
@@ -18,6 +18,10 @@
                 >Se necesita un precio</p>
             </div>
             <div class="input">
+                <label for="oferta">Oferta</label>
+                <input type="number" id="oferta" formControlName="oferta">
+            </div>
+            <div class="input">
                 <label for="cantidad">Cantidad</label>
                 <input type="number" id="cantidad" formControlName="cantidad">
                 <p 
