agregar oferta al item de productos y al carrito

--- a/src/app/modules/productos/components/producto-item/producto-item.component.css
+++ b/src/app/modules/productos/components/producto-item/producto-item.component.css
@@ -38,6 +38,16 @@ img {
     justify-content: space-between;
 }
 
+.info > div > h3 {
+    padding-bottom: 10px;
+}
+
+span.anterior {
+    text-decoration: line-through;
+    margin-right: 10px;
+    color: var(--second-color);
+}
+
 .botones {
     display: flex;
     flex-direction: column;
