--- a/src/app/modules/compra/components/compra/compra.component.html
+++ b/src/app/modules/compra/components/compra/compra.component.html
@@ -18,7 +18,8 @@
         <h4>Productos</h4>
         <div class="producto" *ngFor="let producto of productos">
             <span>{{producto.nombre}} - {{producto.cantidad}} <span *ngIf="producto.cantidad > 1">unidades</span><span *ngIf="producto.cantidad == 1">unidad</span></span>
-            <p>${{producto.precio * producto.cantidad}}</p>
+            <p *ngIf="!producto.oferta">$ {{producto.precio * producto.cantidad}}</p>
+            <p *ngIf="producto.oferta">$ {{(producto.precio * (1 - producto.oferta / 100)) * producto.cantidad}}</p>
         </div>
         <div class="total">
             <span>Total:</span>
