--- a/src/app/modules/admin/components/add-productos/add-productos.component.html
+++ b/src/app/modules/admin/components/add-productos/add-productos.component.html
@@ -18,7 +18,7 @@
                 >Se necesita un precio</p>
             </div>
             <div class="input">
-                <label for="oferta">Oferta</label>
+                <label for="oferta">Oferta (en %)</label>
                 <input type="number" id="oferta" formControlName="oferta">
             </div>
             <div class="input">
