agregar pagina de finalizacion de la compra, con descarga del pdf y link al whatsapp

--- a/src/app/modules/compra/components/compra/compra.component.html
+++ b/src/app/modules/compra/components/compra/compra.component.html
@@ -12,7 +12,7 @@
                 <span>Acordar con el vendedor</span>
             </label>
         </form>
-        <button (click)="comprar()">Avanzar</button>
+        <button routerLink="/finalizacion">Avanzar</button>
     </div>
     <div class="productos">
         <h4>Productos</h4>
@@ -27,6 +27,7 @@
         </div>
     </div>
 </div>
+<!-- ---------- TABLA OCULTA PARA PDF ----------- -->
 <table id="pdfTable">
     <h3>ANBAR</h3>
     <p>Orden de compra</p>
