--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -18,6 +18,10 @@ li,
 
 /* ------- TITULO ------- */
 
+.titulo {
+    align-items: center;
+}
+
 h1 {
     font-size: 2.25rem;
     font-weight: 200;
@@ -28,7 +32,7 @@ h1 {
 /* ------- MENU ------- */
 
 ul {
-    height: 90px;
+    height: 100px;
     list-style: none;
     align-items: stretch;
 }
