--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="header">
     <div class="titulo">
+        <img width="100" height="100" src="../../../assets/iconos/logo-aqua-2.png" alt="logo">
         <h1>{{nosotros?.empresa}}</h1>
-        <img src="../../../assets/iconos/sillon.svg" alt="Sillon">
     </div>
     <ul>
         <li 
