reestilizar carousel y agregarle sombra

--- a/src/app/modules/inicio/components/carousel/carousel.component.css
+++ b/src/app/modules/inicio/components/carousel/carousel.component.css
@@ -5,9 +5,11 @@ div {
     display: flex;
     align-items: center;
     margin: 20px 0;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
 }
 
 h3 {
+    font-family: 'Helvetica';
     font-size: 2rem;
     padding: 0 20px;
 }
