--- a/src/app/modules/inicio/components/destacado-item/destacado-item.component.css
+++ b/src/app/modules/inicio/components/destacado-item/destacado-item.component.css
@@ -15,10 +15,8 @@
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
 }
 
-.img {
-    width: 190px;
-    height: 190px;
-    background-image: url(../../../../../assets/iconos/almohadones.png);
+img {
+    border-radius: 15px 15px 0 0;
 }
 
 .info {
@@ -33,13 +31,14 @@
     gap: 25px;
 }
 
-p.nombre,
-p.precio{
+p.nombre {
     font-weight: 500;
     text-align: center;
 }
 
-p.precio {
+span.anterior {
+    text-decoration: line-through;
+    margin-right: 10px;
     color: var(--second-color);
 }
 
