--- a/src/app/modules/compra/components/compra/compra.component.html
+++ b/src/app/modules/compra/components/compra/compra.component.html
@@ -13,6 +13,7 @@
             </label>
         </form>
         <button (click)="comprar()">Avanzar</button>
+        <button routerLink="../">Volver</button>
     </div>
     <div class="productos">
         <h4>Productos</h4>
@@ -27,28 +28,3 @@
         </div>
     </div>
 </div>
-<!-- ---------- TABLA OCULTA PARA PDF ----------- -->
-<table id="pdfTable">
-    <h3>ANBAR</h3>
-    <p>Orden de compra</p>
-
-    <tr>
-        <th>Producto</th>
-        <th>Cantidad</th>
-        <th>Precio</th>
-        <th>Total</th>
-    </tr>
-    <tr *ngFor="let producto of productos">
-        <td>{{producto.nombre}}</td>
-        <td>{{producto.cantidad}}</td>
-        <td *ngIf="!producto.oferta">${{producto.precio * producto.cantidad}}</td>
-        <td *ngIf="producto.oferta">${{(producto.precio * (1 - producto.oferta / 100)) * producto.cantidad}}</td>
-        <td></td>
-    </tr>
-    <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td>${{precio}}</td>
-    </tr>
-</table>
