--- a/src/app/modules/compra/components/finalizacion/finalizacion.component.css
+++ b/src/app/modules/compra/components/finalizacion/finalizacion.component.css
@@ -19,3 +19,7 @@ button {
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
     background-color: var(--second-color);
 }
+
+table {
+    display: none;
+}
