--- a/src/app/modules/compra/components/finalizacion/finalizacion.component.html
+++ b/src/app/modules/compra/components/finalizacion/finalizacion.component.html
@@ -3,3 +3,28 @@
     <p>Para continuar con el envío, enviar el pdf descargado por <a rel="noopener" href="https://wa.link/xb40k7" target="_blank">WhatsApp</a></p>
     <button routerLink="/">Volver a inicio</button>
 </div>
+<!-- ---------- TABLA OCULTA PARA PDF ----------- -->
+<table id="pdfTable">
+    <h3>ANBAR</h3>
+    <p>Orden de compra</p>
+
+    <tr>
+        <th>Producto</th>
+        <th>Cantidad</th>
+        <th>Precio</th>
+        <th>Total</th>
+    </tr>
+    <tr *ngFor="let producto of productos">
+        <td>{{producto.nombre}}</td>
+        <td>{{producto.cantidad}}</td>
+        <td *ngIf="!producto.oferta">${{producto.precio * producto.cantidad}}</td>
+        <td *ngIf="producto.oferta">${{(producto.precio * (1 - producto.oferta / 100)) * producto.cantidad}}</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>${{precio}}</td>
+    </tr>
+</table>
