--- a/src/app/modules/compra/components/finalizacion/finalizacion.component.css
+++ b/src/app/modules/compra/components/finalizacion/finalizacion.component.css
@@ -18,6 +18,7 @@ button {
     padding: 5px 10px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
     background-color: var(--second-color);
+    margin-right: 20px;
 }
 
 table {
