--- a/src/app/modules/inicio/components/destacados/destacados.component.html
+++ b/src/app/modules/inicio/components/destacados/destacados.component.html
@@ -7,6 +7,7 @@
         <app-destacado-item
             *ngFor="let producto of productos"
             [producto]="producto"
+            routerLink="/main/Productos/{{producto.idproductos}}"
         ></app-destacado-item>
     </div>
 </div>
