--- a/src/app/modules/productos/components/producto-pagina/producto-pagina.component.css
+++ b/src/app/modules/productos/components/producto-pagina/producto-pagina.component.css
@@ -42,8 +42,7 @@
     gap: 50px;
 }
 
-.detalles > h4,
-.detalles > .precio > h4 {
+.detalles h4 {
     font-weight: 600;
     font-size: 1.3rem;
 }
@@ -57,4 +56,35 @@
 
 .precio > p {
     font-size: 1.8rem;
+}
+
+.descripcion > h4 {
+    padding-bottom: 20px;
+}
+
+.compra {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.compra > form > input {
+    font-size: 1rem;
+    border: #ccc 1px solid;
+    border-radius: 10px;
+    text-align: center;
+    padding: 10px;
+}
+
+input:focus {
+    outline: none;
+}
+
+.compra > button {
+    cursor: pointer;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 15px;
+    background-color: var(--main-color);
 }
