agregar links al admin de nosotros

--- a/src/app/modules/admin/components/admin-acerca-de/admin-acerca-de.component.html
+++ b/src/app/modules/admin/components/admin-acerca-de/admin-acerca-de.component.html
@@ -24,7 +24,7 @@
             <p>{{nosotros?.informacion}}</p>
         </div>
         <div class="item">
-            <h4>Imagen</h4>
+            <h4>Logo</h4>
             <p>{{nosotros?.imagen}}</p>
         </div>
         <div class="item">
@@ -32,8 +32,16 @@
             <p>{{nosotros?.telefono}}</p>
         </div>
         <div class="item">
-            <h4>mail</h4>
+            <h4>Mail</h4>
             <p>{{nosotros?.mail}}</p>
+        </div>
+        <div class="item">
+            <h4>Instagram</h4>
+            <p>{{nosotros?.instagram}}</p>
+        </div>
+        <div class="item">
+            <h4>Link de contacto</h4>
+            <p>{{nosotros?.linkContacto}}</p>
         </div>
     </div>
 </div>
