agregar link de instagram en footer

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="redes">
         <h3>ANBAR</h3>
-        <a rel="noopener" href="https://www.instagram.com/anbar_deco/" target="_blank">
+        <a rel="noopener" href="{{nosotros?.instagram}}" target="_blank">
             <img src="../../../assets/iconos/instagram.svg" alt="Instagram">
         </a>
     </div>
