agregar link de contacto en el apartado de contacto

--- a/src/app/modules/contacto/components/contacto/contacto.component.html
+++ b/src/app/modules/contacto/components/contacto/contacto.component.html
@@ -3,5 +3,6 @@
     <div class="info">
         <p *ngIf="nosotros?.telefono"><span class="title">Teléfono:</span> {{nosotros?.telefono}}</p>
         <p *ngIf="nosotros?.mail"><span class="title">Mail:</span> {{nosotros?.mail}}</p>
+        <p *ngIf="nosotros?.linkContacto"><span class="title">Link de contacto:</span> {{nosotros?.linkContacto}}</p>
     </div>
 </div>
