agregar mi pagina al footer

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,4 +5,5 @@
             <img src="../../../assets/iconos/instagram.svg" alt="Instagram">
         </a>
     </div>
+    <p>Página desarrollada por <a rel="noopener" target="_blank" href="https://pablobarcala-f9981.web.app/">Pablo Barcala</a></p> 
 </div>
