--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -4,6 +4,7 @@
     border-radius: 15px 15px 0 0;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     gap: 100px;
     padding: 60px 70px;
 }
@@ -23,4 +24,14 @@
 
 .redes img {
     transform: scale(0.6);
+}
+
+.container > p {
+    font-size: 0.8rem;
+}
+
+p > a {
+    text-decoration: none;
+    font-weight: 600;
+    color: var(--second-color);
 }
