agregar telefono de nosotros al pdf

--- a/src/app/modules/compra/components/finalizacion/finalizacion.component.html
+++ b/src/app/modules/compra/components/finalizacion/finalizacion.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h3>Felicidades por la compra!</h3>
+    <h3>Gracias por la compra!</h3>
     <p>Para continuar con el envío, enviar el pdf descargado por <a rel="noopener" href="https://wa.me/{{nosotros?.telefono}}" target="_blank">WhatsApp</a></p>
     <button routerLink="/">Volver a inicio</button>
     <button (click)="descargar()">Descargar PDF</button>
