reordenar colores de componentes

--- a/src/app/components/carrito/carrito.component.css
+++ b/src/app/components/carrito/carrito.component.css
@@ -5,7 +5,7 @@
     min-height: 10%;
     width: 30%;
     padding: 20px;
-    background-color: var(--main-color);
+    background-color: var(--main-light-color);
     border-radius: 10px 0 0 10px;
     display: flex;
     flex-direction: column;
@@ -20,7 +20,7 @@
 
 .item {
     padding: 20px 0;
-    border-bottom: 1px solid var(--second-color);
+    border-bottom: 1px solid var(--second-light-color);
     gap: 20px;
 }
 
