--- a/src/app/modules/admin/components/add-categorias/add-categorias.component.css
+++ b/src/app/modules/admin/components/add-categorias/add-categorias.component.css
@@ -3,8 +3,9 @@ button {
     margin-right: 20px;
     margin-bottom: 40px;
     border: none;
-    background-color: var(--main-color);
-    padding: 10px;
+    background-color: var(--main-dark-color);
+    padding: 5px 15px;
+    color: #fff;
     border-radius: 10px;
 }
 
