--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -33,5 +33,5 @@
 p > a {
     text-decoration: none;
     font-weight: 600;
-    color: var(--second-color);
+    color: var(--second-dark-color);
 }
