--- a/src/app/modules/admin/components/admin-acerca-de/admin-acerca-de.component.css
+++ b/src/app/modules/admin/components/admin-acerca-de/admin-acerca-de.component.css
@@ -28,6 +28,6 @@ h2 {
 
 .item > h4 {
     font-size: 1.2rem;
-    border-bottom: 2px solid var(--main-color);
+    border-bottom: 2px solid var(--main-light-color);
     margin-bottom: 10px;
 }
