--- a/src/app/modules/admin/components/edit-productos/edit-productos.component.css
+++ b/src/app/modules/admin/components/edit-productos/edit-productos.component.css
@@ -6,8 +6,9 @@ button {
     cursor: pointer;
     margin-right: 20px;
     border: none;
-    background-color: var(--main-color);
-    padding: 10px;
+    background-color: var(--main-dark-color);
+    padding: 5px 15px;
+    color: #fff;
     border-radius: 10px;
 }
 
