--- a/src/app/modules/faq/components/faq/faq.component.css
+++ b/src/app/modules/faq/components/faq/faq.component.css
@@ -8,8 +8,8 @@ h3 {
 }
 
 .pregunta {
-    padding: 10px 0;
-    border-bottom: 2px solid #000;
+    padding: 15px 0;
+    border-bottom: 2px solid var(--second-light-color);
 }
 
 .pregunta > h4 {
