--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="redes">
-        <h3>ANBAR</h3>
+        <h3>{{nosotros?.empresa}}</h3>
         <a rel="noopener" href="{{nosotros?.instagram}}" target="_blank">
             <img src="../../../assets/iconos/instagram.svg" alt="Instagram">
         </a>
