--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -26,7 +26,6 @@ h1 {
     font-size: 2.25rem;
     font-weight: 200;
     letter-spacing: 5px;
-    margin-right: 20px;
 }
 
 /* ------- MENU ------- */
@@ -50,6 +49,14 @@ li.selected {
     transition: border-bottom 0.3s ease;
 }
 
+.lista_cel {
+    display: flex;
+    justify-content: center;
+    border-bottom: 1px solid #000;
+    height: 50px;
+    display: none;
+}
+
 /* ------- ICONOS ------- */
 
 .iconos {
@@ -59,6 +66,9 @@ li.selected {
 
 img {
     transform: scale(0.7);
+}
+
+.iconos > img {
     cursor: pointer;
 }
 
@@ -77,4 +87,28 @@ img {
     padding-left: 20px;
     font-weight: 500;
     font-size: 1.5rem;
+}
+
+/* -------- MEDIA QUERIES -------- */
+@media (max-width: 550px) {
+    .header {
+        padding: 0 15px;
+    }
+
+    .lista_pc {
+        display: none;
+    }
+
+    li {
+        border-bottom: 5px solid transparent;
+    }
+    
+    li:hover,
+    li.selected {
+        border-bottom: 5px solid var(--main-color);
+    }
+
+    .iconos {
+        gap: 5px;
+    }
 }
