--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
         <img width="100" height="100" src="../../../assets/iconos/logo-aqua-2.png" alt="logo">
         <h1>{{nosotros?.empresa}}</h1>
     </div>
-    <ul>
+    <ul class="lista_pc">
         <li 
             *ngFor="let opcion of opciones" 
             routerLink="/main/{{opcion}}"
@@ -16,3 +16,10 @@
         <span class="precio">${{precio}}</span>
     </div>
 </div>
+<ul class="lista_cel">
+    <li 
+        *ngFor="let opcion of opciones" 
+        routerLink="/main/{{opcion}}"
+        [routerLinkActive]="'selected'"
+    >{{opcion}}</li>
+</ul>
