--- a/src/app/modules/inicio/components/beneficios/beneficios.component.css
+++ b/src/app/modules/inicio/components/beneficios/beneficios.component.css
@@ -19,3 +19,18 @@
 .item > img {
     transform: scale(0.6);
 }
+
+/* -------- MEDIA QUERIES -------- */
+@media (max-width: 550px) {
+    .beneficios {
+        padding: 10px 15px;
+    }
+
+    .item {
+        gap: 10px;
+    }
+
+    .item > img {
+        width: 30%;
+    }
+}
