--- a/src/app/modules/inicio/components/destacado-item/destacado-item.component.css
+++ b/src/app/modules/inicio/components/destacado-item/destacado-item.component.css
@@ -1,7 +1,7 @@
 .item {
     cursor: pointer;
     border-radius: 15px;
-    width: 190px;
+    width: 100%;
     margin-top: 50px;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
 }
@@ -17,6 +17,8 @@
 
 img {
     border-radius: 15px 15px 0 0;
+    width: 100%;
+    height: 230px;
 }
 
 .info {
@@ -32,6 +34,7 @@ img {
 }
 
 p.nombre {
+    font-size: 1.2rem;
     font-weight: 500;
     text-align: center;
 }
@@ -49,4 +52,11 @@ span.anterior {
     padding: 5px 15px;
     border-radius: 15px;
     color: #fff;
+}
+
+/* -------- MEDIA QUERIES -------- */
+@media (max-width: 550px) {
+    img {
+        height: 190px;
+    }
 }
