--- a/src/app/modules/inicio/components/destacado-item/destacado-item.component.html
+++ b/src/app/modules/inicio/components/destacado-item/destacado-item.component.html
@@ -1,6 +1,5 @@
 <div class="item" *ngIf="producto">
-    <!-- <div class="img"></div> -->
-    <img src="{{producto.imagen}}" alt="Almohadones" width="190" height="190">
+    <img src="{{producto.imagen}}" alt="Imagen de producto">
     <div class="info">
         <p class="nombre">{{producto.nombre}}</p>
         <span><span [ngClass]="{'anterior': producto.oferta > 0}">${{producto.precio}}</span><span *ngIf="producto.oferta > 0">${{producto.precio * (1 - (producto.oferta / 100))}} (-{{producto.oferta}}%)</span></span>
