adaptar modulo de compra y admin a celular

--- a/src/app/components/carrito/carrito.component.css
+++ b/src/app/components/carrito/carrito.component.css
@@ -105,3 +105,10 @@ input:focus {
     flex-direction: column;
     align-items: center;
 }
+
+/* -------- MEDIA QUERIES -------- */
+@media (max-width: 550px) {
+    .container {
+        width: 60%;
+    }
+}
