--- a/src/app/modules/admin/components/admin-faq/admin-faq.component.css
+++ b/src/app/modules/admin/components/admin-faq/admin-faq.component.css
@@ -52,3 +52,10 @@ th {
 .botones > button:hover {
     background-color: #e6e6e6;
 }
+
+/* -------- MEDIA QUERIES -------- */
+@media (max-width: 550px) {
+    table {
+        width: 100%;
+    }
+}
