--- a/src/app/modules/admin/components/admin-productos/admin-productos.component.html
+++ b/src/app/modules/admin/components/admin-productos/admin-productos.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="title">
         <h2>Productos</h2>
-        <div class="filtros">
+        <div class="filtros_pc">
             <div
                 *ngFor="let categoria of categorias"
                 (click)="cambiarOpcion(categoria.nombre)"
@@ -11,6 +11,13 @@
         <button routerLink="add-producto">
             <img src="../../../../../assets/iconos/add.svg" alt="Agregar">
         </button>
+    </div>
+    <div class="filtros_cel">
+        <div
+            *ngFor="let categoria of categorias"
+            (click)="cambiarOpcion(categoria.nombre)"
+            [ngClass]="{'selected': categoria.nombre == adminNavOpcion}"
+        >{{categoria.nombre}}</div>
     </div>
     <router-outlet></router-outlet>
     <div class="table">
