--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -50,8 +50,6 @@ li.selected {
 }
 
 .lista_cel {
-    display: flex;
-    justify-content: center;
     border-bottom: 1px solid #000;
     height: 50px;
     display: none;
@@ -93,6 +91,11 @@ img {
 @media (max-width: 550px) {
     .header {
         padding: 0 15px;
+    }
+
+    .lista_cel {
+        display: flex;
+        justify-content: center;
     }
 
     .lista_pc {
