--- a/src/app/modules/admin/components/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/components/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="aside">
         <span class="title"><h3>ANBAR</h3>Panel de control</span>
-        <ul>
+        <ul class="list_pc">
             <li routerLink="admin-productos" [routerLinkActive]="'selected'">Productos</li>
             <li routerLink="admin-categorias" [routerLinkActive]="'selected'">Categorias</li>
             <li routerLink="admin-acerca-de" [routerLinkActive]="'selected'">Acerca de</li>
@@ -9,5 +9,11 @@
         </ul>
         <button routerLink="">Ir a la página</button>
     </div>
+    <ul class="list_cel">
+        <li routerLink="admin-productos" [routerLinkActive]="'selected'">Productos</li>
+        <li routerLink="admin-categorias" [routerLinkActive]="'selected'">Categorias</li>
+        <li routerLink="admin-acerca-de" [routerLinkActive]="'selected'">Acerca de</li>
+        <li routerLink="admin-faq" [routerLinkActive]="'selected'">Preguntas frecuentes</li>
+    </ul>
     <router-outlet></router-outlet>
 </div>
