reeditar diseño de celular en beneficios y productos

--- a/src/app/modules/productos/components/productos/productos.component.css
+++ b/src/app/modules/productos/components/productos/productos.component.css
@@ -6,6 +6,11 @@
     display: flex;
     padding: 20px 0;
     gap: 10px;
+    overflow: auto;
+}
+
+.container-opciones::-webkit-scrollbar {
+    display: none;
 }
 
 .opcion {
