--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -93,6 +93,10 @@ img {
         padding: 0 15px;
     }
 
+    h1 {
+        font-weight: 400;
+    }
+
     .lista_cel {
         display: flex;
         justify-content: center;
