--- a/src/app/modules/productos/components/producto-pagina/producto-pagina.component.css
+++ b/src/app/modules/productos/components/producto-pagina/producto-pagina.component.css
@@ -34,6 +34,8 @@
 
 .info > img {
     border-radius: 15px;
+    width: 22%;
+    height: 22%;
 }
 
 .info {
@@ -54,8 +56,14 @@
     padding-bottom: 20px;
 }
 
-.precio > p {
+.precio > span {
     font-size: 1.8rem;
+}
+
+span.anterior {
+    text-decoration: line-through;
+    margin-right: 10px;
+    color: var(--second-dark-color);
 }
 
 .descripcion > h4 {
@@ -88,4 +96,17 @@ input:focus {
     border-radius: 15px;
     background-color: var(--main-dark-color);
     color: #fff;
+}
+
+/* -------- MEDIA QUERIES -------- */
+@media (max-width: 550px) {
+    .info {
+        flex-direction: column;
+    }
+
+    .info > img {
+        width: 70%;
+        height: 70%;
+        margin: auto;
+    }
 }
