--- a/src/app/modules/productos/components/producto-pagina/producto-pagina.component.html
+++ b/src/app/modules/productos/components/producto-pagina/producto-pagina.component.html
@@ -6,11 +6,11 @@
         <h4>{{producto.nombre}}</h4>
     </div>
     <div class="info">
-        <img src="{{producto.imagen}}" alt="Imagen del producto" width="22%" height="22%">
+        <img src="{{producto.imagen}}" alt="Imagen del producto">
         <div class="detalles">
             <div class="precio">
                 <h4>Precio:</h4>
-                <p>${{producto.precio}}</p>
+                <span><span [ngClass]="{'anterior': producto.oferta > 0}">${{producto.precio}}</span><span *ngIf="producto.oferta > 0">${{producto.precio * (1 - (producto.oferta / 100))}} (-{{producto.oferta}}%)</span></span>
             </div>
             <div class="descripcion">
                 <h4>Descripción:</h4>
