--- a/src/app/modules/inicio/components/carousel/carousel.component.css
+++ b/src/app/modules/inicio/components/carousel/carousel.component.css
@@ -10,8 +10,9 @@ div {
 }
 
 h3 {
-    font-family: 'Helvetica';
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 2rem;
+    font-weight: 200;
     padding: 0 20px;
 }
 
