--- a/src/app/modules/admin/components/dashboard/dashboard.component.css
+++ b/src/app/modules/admin/components/dashboard/dashboard.component.css
@@ -27,7 +27,7 @@
     letter-spacing: 5px;
 }
 
-.aside > button {
+.aside > div > button {
     cursor: pointer;
     align-self: center;
     font-family: "Trebuchet MS";
@@ -37,6 +37,7 @@
     color: #fff;
     padding: 5px 15px;
     border-radius: 15px;
+    margin-left: 10px;
 }
 
 ul {
