--- a/src/app/modules/admin/components/login/login.component.html
+++ b/src/app/modules/admin/components/login/login.component.html
@@ -1,8 +1,10 @@
 <div class="container">
     <h5>Login</h5>
-    <form action="" (submit)="login()">
-        <input placeholder="usuario" type="text" name="Username" id="username">
-        <input placeholder="contraseña" type="password" name="Password" id="password">
+    <form action="" (submit)="login($event)" [formGroup]="form">
+        <label for="nombreUsuario">Nombre de usuario</label>
+        <input type="text" id="nombreUsuario" formControlName="nombreUsuario">
+        <label for="password">Contraseña</label>
+        <input type="password" id="password" formControlName="password">
         <button type="submit">Ingresar</button>
         <button type="button" routerLink="">Volver</button>
     </form>
